Created separate package and sample folders

--- a/lineify-package/package.json
+++ b/lineify-package/package.json
@@ -4,20 +4,29 @@
   "description": "Highlight.js Lineify Plugin",
   "main": "dist/highlightjs-lineify.min.js",
   "module": "dist/highlightjs-lineify.esm.min.js",
+  "browser": "dist/highlightjs-lineify.min.js",
   "scripts": {
     "build": "rollup -c",
     "test": "echo \"Error: no test specified\" && exit 1",
     "publish": "npm publish --access public --tag next"
   },
   "type": "module",
-  "author": "Hallvard Trætteberg <hal@ntnu.no>",
-  "license": "BSD-3-Clause",
   "devDependencies": {
-    "rollup": "^2.52.1"
+    "rollup": "^2.52.2"
   },
   "dependencies": {},
   "files": [
     "dist",
     "src"
-  ]
+  ],
+  "homepage": "https://github.com/hallvard/highlightjs-lineify",
+  "author": "Hallvard Trætteberg <hal@ntnu.no>",
+  "license": "BSD-3-Clause",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hallvard/highlightjs-lineify.git"
+  },
+  "bugs": {
+    "url": "https://github.com/hallvard/highlightjs-lineify/issues"
+  }
 }
