--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,3 +1,3 @@
 tasks:
-  - init: npm install rollup --save-dev
-  - command: npx rollup --config
+  - init: cd lineify-package; npm install rollup --save-dev
+  - command: cd lineify-package; npx rollup --config
